--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "react-router-dom": "^5.1.2",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "react-bootstrap": "^1.0.0",
+    "@types/react-bootstrap": "^0.32.20",
+    "@types/react-router-dom": "^5.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
