--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^5.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "react-icons": "^3.9.0",
+    "@types/react-icons": "^3.0.0",
     "react-bootstrap": "^1.0.0",
     "@types/react-bootstrap": "^0.32.20",
     "@types/react-router-dom": "^5.1.3"
