--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.1.3",
+    "redux": "^4.0.5",
+    "react-redux": "^7.2.0",
+    "@types/react-redux": "^7.1.7",
+    "redux-thunk": "^2.3.0",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
