--- a/package.json
+++ b/package.json
@@ -3,33 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/material-ui": "^0.21.7",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-icons": "^3.0.0",
-    "@types/react-router-dom": "^5.1.3",
-    "redux": "^4.0.5",
-    "react-redux": "^7.2.0",
     "@types/react-redux": "^7.1.7",
-    "redux-thunk": "^2.3.0",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/yup": "^0.26.34",
     "axios": "^0.19.2",
+    "formik": "^2.1.4",
+    "formik-material-ui": "^2.0.0-beta.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "@material-ui/core": "^4.9.8",
-    "@types/material-ui": "^0.21.7",
+    "react-stripe-checkout": "^2.6.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "serve": "^11.3.0",
     "typescript": "~3.7.2",
-    "formik": "^2.1.4",
-    "yup": "^0.28.3",
-    "@types/yup": "^0.26.34",
-    "formik-material-ui": "^2.0.0-beta.1",
-    "react-stripe-checkout": "^2.6.3"
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
