--- a/package.json
+++ b/package.json
@@ -32,6 +32,18 @@
     "typescript": "~3.7.2",
     "yup": "^0.28.3"
   },
+  "devDependencies": {
+    "@types/jest": "^24.0.0",
+    "@types/material-ui": "^0.21.7",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/yup": "^0.26.34",
+    "prettier": "^2.0.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
